# Hexapod

./: .gitignore  Dockerfile  build.sh  run.sh  run_image.sh  welcome.sh
build_files/install/: local_setup.sh  setup.sh
build_files/log/: latest_build
hexapod_control/: CMakeLists.txt  package.xml
hexapod_control/config/: hexapod_controller.yaml
hexapod_control/ros2_control/: ros2_control.xacro
hexapod_control/scripts/: bot_controller.py  controller_backup.py  get_sim_time.py  hexapod.py  position_subcriber.py  servotest.py
hexapod_description/: .gitignore  CMakeLists.txt  Dockerfile  build_image.sh  package.xml  run_image.sh  setup.py
hexapod_description/config/: display.rviz
hexapod_description/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch  gazebo.launch.py  hexapod.launch.py  robot.launch.py
hexapod_description/meshes/: base_link.stl  leg_1_coxa_1.stl  leg_1_femur_1.stl  leg_1_link_1_1.stl  leg_1_link_2_1.stl  leg_1_link_3_1.stl  leg_1_tibia_1.stl  leg_2_coxa_1.stl  leg_2_femur_1.stl  leg_2_link_1_1.stl  leg_2_link_2_1.stl  leg_2_link_3__1.stl  leg_2_link_3__1__1.stl  leg_2_tibia_1.stl  leg_3_femur_1.stl  leg_3_link_1_1.stl  leg_3_link_2_1.stl  leg_3_link_3_1.stl  leg_3_tibia_1.stl  leg_4_coxa_1.stl  leg_4_femur_1.stl  leg_4_link_1_1.stl  leg_4_link_2_1.stl  leg_4_link_3_1.stl  leg_4_tibia_1.stl  leg_5_coxa_1.stl  leg_5_femur_1.stl  leg_5_link_1_1.stl  leg_5_link_3_1.stl  leg_5_llink_2_1.stl  leg_5_tibia_1.stl  leg_6_coxa_1.stl  leg_6_femur_1.stl  leg_6_link_1_1.stl  leg_6_link_2_1.stl  leg_6_link_3_1.stl  leg_6_tibia_1.stl
hexapod_description/scripts/: rviz_to_gazebo.py
hexapod_description/urdf/: hexapod.gazebo  hexapod.trans  hexapod.xacro  materials.xacro  zamin.gazebo  zamin.trans  zamin.xacro
hexapod_description/worlds/: world.sdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gz_ros2_control_tests/lib/gz_ros2_control_tests/: test_position
install/gz_ros2_control_tests/share/gz_ros2_control_tests/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/hexapod_control/lib/hexapod_control/: bot_controller.py
install/hexapod_control/share/hexapod_control/: package.bash  package.sh
install/hexapod_description/share/hexapod_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ign_ros2_control/include/ign_ros2_control/: ign_ros2_control_plugin.hpp  ign_system.hpp  (+1 more)
log/: latest_build  latest_list
src/hexapod_description/: setup.cfg  setup.py
src/hexapod_description/config/: my_controllers.yaml
src/hexapod_description/launch/: gazebo.launch.py  robot.launch.py
src/hexapod_description/meshes/: leg_2_link_2_1.stl  leg_2_link_3__1__1.stl  leg_3_link_1_1.stl  leg_4_link_2_1.stl  leg_5_link_1_1.stl  leg_5_llink_2_1.stl  leg_6_link_2_1.stl  leg_6_link_3_1.stl
src/hexapod_description/urdf/: controllers.xacro  hexapod.xacro
(+159 files in other folders)
